--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,11 +11,11 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="75" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="75" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="75" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="75" />
+            <RowDefinition Height="10" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -28,7 +28,9 @@
         
         <StackPanel Grid.Row="1" Grid.Column="1">
             <TextBox x:Name="inputText"/>
-            <Button x:Name="btnAdd" Click="ButtonAddName_Click">Decode</Button>
+            <TextBox x:Name="inputKey"/>
+            <TextBox x:Name="inputVector"/>
+            <Button x:Name="btnDecode" Click="ButtonDecode_Click">Decode</Button>
         </StackPanel>
         
         <TextBox Grid.Column="1" Grid.Row="2" x:Name="outputText"/>
@@ -37,7 +39,9 @@
         
         <StackPanel Grid.Row="5" Grid.Column="1">
             <TextBox x:Name="inputTextC"/>
-            <Button x:Name="btnEncode" Click="ButtonAddName_Click">Encode</Button>
+            <TextBox x:Name="inputKeyC"/>
+            <TextBox x:Name="inputVectorC"/>
+            <Button x:Name="btnEncode" Click="ButtonEncode_Click">Encode</Button>
         </StackPanel>
         
         <TextBox Grid.Column="1" Grid.Row="6" x:Name="outputTextC"/>
